# 3d-viewer

./: .env.example  .gitignore  CLAUDE.md  README.md  compose.yaml
.github/workflows/: ci.yml
docs/: API設定.md  CI_usage_guide.md  DB設計.md  docker.md  frontend_testing_strategy.md  phase1_documentation.md  phase1_frontend.md  phase2_documentation.md  rule.md  test_specification.md  サイトマップ.md  フォルダ構成.md  技術スタック.md
docs/temp/: detailed_refactoring_plan.md  mockup.ts  refactoring_plan.md
frontend/: .env.example  .gitignore  Dockerfile  next.config.ts  package.json  playwright.config.ci.ts  playwright.config.ts  pnpm-lock.yaml  vitest.config.mts  vitest.config.ts
frontend/public/: manifest.json  sw.js
pipeline/: .dockerignore  .env.example  .flake8  Dockerfile  pyproject.toml  requirements.txt
pipeline/src/: main.py
pipeline/src/application/usecases/: obj_to_glb_usecase.py
pipeline/src/config/: settings.py
pipeline/src/infrastructure/converters/: obj2gltf_converter.py
pipeline/src/infrastructure/storage/: minio_client.py
pipeline/src/presentation/routers/: conversion.py  health.py
pipeline/src/presentation/schemas/: request.py
pipeline/tests/integration/: test_api.py
pipeline/tests/unit/: test_converter.py
scripts/: convert_mac_models.py  convert_obj_to_glb.py
scripts/temp/: flip_texture_uv.py  rotate_imac.py  rotate_macbookair.py  rotate_model.py  sample.py
server/: .dockerignore  .env.example  Dockerfile  eslint.config.mjs  package.json  pnpm-lock.yaml
server/prisma/: schema.prisma  seed.ts
server/src/: app.controller.spec.ts  main.ts  (+2 more)
(+73 files in other folders)
