[project]
name = "pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "minio>=7.2.20",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
pythonpath = "."

[dependency-groups]
dev = [
    "black>=25.12.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "types-redis>=4.6.0.20241004",
    "types-requests>=2.32.4.20260107",
    "types-ujson>=5.10.0.20250822",
]
